--- a/.env
+++ b/.env
@@ -11,9 +11,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=resto
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=n1575481_resto
+DB_USERNAME=n1575481_admin
+DB_PASSWORD=resto_admin123456
+# DB_DATABASE=resto
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
