--- a/.env
+++ b/.env
@@ -11,12 +11,12 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=n1575481_resto
-DB_USERNAME=n1575481_admin
-DB_PASSWORD=resto_admin123456
-# DB_DATABASE=resto
-# DB_USERNAME=root
-# DB_PASSWORD=
+# DB_DATABASE=n1575481_resto
+# DB_USERNAME=n1575481_admin
+# DB_PASSWORD=resto_admin123456
+DB_DATABASE=resto
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -38,7 +38,7 @@ MAIL_USERNAME=ta.160420029@gmail.com
 MAIL_PASSWORD=txsorwmnganegaua
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS=ta.160420029@gmail.com
-MAIL_FROM_NAME="Vinautism Art & Resto Verification"
+MAIL_FROM_NAME="Vinautism Art & Resto"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
